Add styles ai-agents__title styles

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
   <title>Realm</title>
 </head>
 
 <body>
-  <section class="ai-agents">
-    <h2>AI agents for revenue teams</h2>
+  <section class="ai-agents field">
+    <h2 class="ai-agents__title">AI agents for revenue teams</h2>
 
-    <div class="cards">
+    <div class="cards fl">
       <div class="card">
         <img src="img/agent-1.jpg" alt="AI Agent 1">
         <div class="card__content">
