--- a/index.html
+++ b/index.html
@@ -9,6 +9,49 @@
 </head>
 
 <body>
+  <div class="banner field">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__left">
+          <a href="#" class="header__logo">Realm</a>
+
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li><a href="#" class="header__link">Realm</a></li>
+              <li><a href="#" class="header__link">Features</a></li>
+              <li><a href="#" class="header__link">Resources</a></li>
+              <li><a href="#" class="header__link">Pricing</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="header__buttons">
+          <a href="#" class="btn">Sign in</a>
+          <a href="#" class="btn btn--blue">Sign up</a>
+        </div>
+      </div>
+    </header>
+
+    <section class="hero">
+      <div class="hero__container">
+        <h1 class="hero__title">
+          Turn your company knowledge into answers and agents
+        </h1>
+        <p class="hero__subtitle">
+          Realm's AI agents arm your revenue team with instant answers to customer questions, automate RFPs, and
+          supercharge your revenue enablement.
+        </p>
+        <a href="#" class="btn btn--blue">Get started for free</a>
+      </div>
+
+      <div class="hero__logos">
+        <p>Over 87 million Realm users worldwide.</p>
+        <img src="img/logo-img-list.png" alt="Partner logos">
+      </div>
+    </section>
+  </div>
+
+
   <section class="ai-agents field">
     <h2 class="ai-agents__title">AI agents for revenue teams</h2>
 
