add style for header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
   <link rel="stylesheet" href="css/main.css">
   <title>Realm</title>
 </head>
@@ -11,13 +12,12 @@
 <body>
   <div class="banner field">
     <header class="header">
-      <div class="header__container">
-        <div class="header__left">
-          <a href="#" class="header__logo">Realm</a>
+      <div class="header__container fl">
+        <div class="header__left fl">
+          <a href="#" class="header__logo"><img src="img/Union.png" alt="logo">Realm</a>
 
           <nav class="header__nav">
-            <ul class="header__list">
-              <li><a href="#" class="header__link">Realm</a></li>
+            <ul class="header__list fl">
               <li><a href="#" class="header__link">Features</a></li>
               <li><a href="#" class="header__link">Resources</a></li>
               <li><a href="#" class="header__link">Pricing</a></li>
@@ -25,7 +25,7 @@
           </nav>
         </div>
 
-        <div class="header__buttons">
+        <div class="header__buttons fl">
           <a href="#" class="btn">Sign in</a>
           <a href="#" class="btn btn--blue">Sign up</a>
         </div>
