--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"
+    rel="stylesheet" />
   <link rel="stylesheet" href="css/main.css">
   <title>Realm</title>
 </head>
 
 <body>
-  <div class="banner field">
-    <header class="header">
+  <header class="header">
+    <div class="field">
       <div class="header__container fl">
         <div class="header__left fl">
-          <a href="#" class="header__logo"><img src="img/Union.png" alt="logo">Realm</a>
+          <a href="#" class="header__logo fl"><img src="img/Union.png" alt="logo">Realm</a>
 
           <nav class="header__nav">
             <ul class="header__list fl">
@@ -30,26 +32,26 @@
           <a href="#" class="btn btn--blue">Sign up</a>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
+  <section class="hero field">
+    <div class="hero__container">
+      <h1 class="hero__title">
+        Turn your company knowledge into answers and agents
+      </h1>
+      <p class="hero__subtitle">
+        Realm's AI agents arm your revenue team with instant answers to customer questions, automate RFPs, and
+        supercharge your revenue enablement.
+      </p>
+      <a href="#" class="btn btn--blue">Get started for free</a>
+    </div>
 
-    <section class="hero">
-      <div class="hero__container">
-        <h1 class="hero__title">
-          Turn your company knowledge into answers and agents
-        </h1>
-        <p class="hero__subtitle">
-          Realm's AI agents arm your revenue team with instant answers to customer questions, automate RFPs, and
-          supercharge your revenue enablement.
-        </p>
-        <a href="#" class="btn btn--blue">Get started for free</a>
-      </div>
-
-      <div class="hero__logos">
-        <p>Over 87 million Realm users worldwide.</p>
-        <img src="img/logo-img-list.png" alt="Partner logos">
-      </div>
-    </section>
-  </div>
+    <div class="hero__logos">
+      <p>Over 87 million Realm users worldwide.</p>
+      <img src="img/logo-img-list.png" alt="Partner logos">
+    </div>
+  </section>
+  <!-- </div> -->
 
 
   <section class="ai-agents field">
