--- a/index.html
+++ b/index.html
@@ -34,21 +34,25 @@
       </div>
     </div>
   </header>
-  <section class="hero field">
-    <div class="hero__container">
-      <h1 class="hero__title">
-        Turn your company knowledge into answers and agents
-      </h1>
-      <p class="hero__subtitle">
-        Realm's AI agents arm your revenue team with instant answers to customer questions, automate RFPs, and
-        supercharge your revenue enablement.
-      </p>
-      <a href="#" class="btn btn--blue">Get started for free</a>
-    </div>
+  <section class="banner">
+    <div class="field">
+      <div class="banner__container">
+        <h1 class="banner__title">
+          Turn your company knowledge into answers and agents
+        </h1>
+        <p class="banner__subtitle">
+          Realm's AI agents arm your revenue team with instant answers to customer questions, automate RFPs, and
+          supercharge your revenue enablement.
+        </p>
+        <a href="#" class="btn btn--blue">Get started for free</a>
+      </div>
 
-    <div class="hero__logos">
-      <p>Over 87 million Realm users worldwide.</p>
-      <img src="img/logo-img-list.png" alt="Partner logos">
+      <div class="banner__logos fl">
+        <p>Over 87 million Realm users worldwide.</p>
+        <div id="">
+          <img class="banner__logos__images" src="img/logo-img-list.png" alt="Partner logos">
+        </div>
+      </div>
     </div>
   </section>
   <!-- </div> -->
