--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="header__buttons fl">
-          <a href="#" class="btn">Sign in</a>
-          <a href="#" class="btn btn--blue">Sign up</a>
+          <a href="#" class="link-gs">Sign in</a>
+          <a href="#" class="link-gs link-gs--blue">Sign up</a>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
           Realm's AI agents arm your revenue team with instant answers to customer questions, automate RFPs, and
           supercharge your revenue enablement.
         </p>
-        <a href="#" class="btn btn--blue">Get started for free</a>
+        <a href="#" class="link-gs link-gs--blue">Get started for free</a>
       </div>
 
       <div class="banner__logos fl">
@@ -63,29 +63,48 @@
 
     <div class="cards fl">
       <div class="card">
-        <img src="img/agent-1.jpg" alt="AI Agent 1">
+        <img class="card__image" src="img/card-1.png" alt="AI Agent 1">
         <div class="card__content">
-          <h3 class="card__title">Exploration Drone</h3>
-          <p class="card__meta">Autonomous drone with advanced navigation and terrain scanning.</p>
-          <button class="card__btn">Learn more</button>
+          <h3 class="card__title">Rapid answers to technical and product questions</h3>
+          <p class="card__description">Rapid answers to technical and product questions
+            Empower your customer-facing teams with 24/7 guidance on product features, technical details, use cases, and
+            more.</p>
+          <a class="card__link-gs">Get started for free</a>
+        </div>
+        <div class="card__links__container">
+          <img src="img/plus.png" alt="" class="card__desc-icon default-icon">
+          <img src="img/minus.png" alt="" class="card__desc-icon hover-icon">
         </div>
       </div>
 
       <div class="card">
-        <img src="img/agent-2.jpg" alt="AI Agent 2">
+        <img class="card__image" src="img/card-2.png" alt="AI Agent 1">
         <div class="card__content">
-          <h3 class="card__title">Security Bot</h3>
-          <p class="card__meta">Smart surveillance unit for perimeter protection and threat detection.</p>
-          <button class="card__btn">Learn more</button>
+          <h3 class="card__title">Automate RFPs and other questionnaires
+          </h3>
+          <p class="card__description"> Empower your customer-facing teams with 24/7 guidance on product features,
+            technical details, use cases, and more.
+          </p>
+          <a class="card__link-gs">Get started for free</a>
+        </div>
+        <div class="card__links__container">
+          <img src="img/plus.png" alt="" class="card__desc-icon default-icon">
+          <img src="img/minus.png" alt="" class="card__desc-icon hover-icon">
         </div>
       </div>
 
       <div class="card">
-        <img src="img/agent-3.jpg" alt="AI Agent 3">
+        <img class="card__image" src="img/card-3.png" alt="AI Agent 1">
         <div class="card__content">
-          <h3 class="card__title">Medical Assistant</h3>
-          <p class="card__meta">AI-powered healthcare companion capable of diagnostics and support.</p>
-          <button class="card__btn">Learn more</button>
+          <h3 class="card__title">Instant revenue enablement</h3>
+          <p class="card__description">Empower your customer-facing teams with 24/7 guidance on product features,
+            technical details, use cases, and
+            more.</p>
+          <a class="card__link-gs">Get started for free</a>
+        </div>
+        <div class="card__links__container">
+          <img src="img/plus.png" alt="" class="card__desc-icon default-icon">
+          <img src="img/minus.png" alt="" class="card__desc-icon hover-icon">
         </div>
       </div>
     </div>
