--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           </nav>
         </div>
 
-        <div class="header__buttons fl">
-          <a href="#" class="link-gs">Sign in</a>
-          <a href="#" class="link-gs link-gs--blue">Sign up</a>
+        <div class="fl header__buttons">
+          <a href="#" class="btn">Sign in</a>
+          <a href="#" class="btn btn--blue">Sign up</a>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
           Realm's AI agents arm your revenue team with instant answers to customer questions, automate RFPs, and
           supercharge your revenue enablement.
         </p>
-        <a href="#" class="link-gs link-gs--blue">Get started for free</a>
+        <a href="#" class="btn btn--blue">Get started for free</a>
       </div>
 
       <div class="banner__logos fl">
