--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
 
   <section class="accel sc">
     <div class="accel__container field fl">
-
       <div class="accel__left fl">
         <h1 class="accel__title">Accelerate revenue-generating work with AI</h1>
         <div class="accel__item_container fl">
@@ -126,26 +125,95 @@
               with the technical baseline to sell effectively and advise customers.
             </p>
           </div>
-
           <div class="accel__item accel__item--disabled">
             <h3 class="accel__item-title">Questionnaires</h3>
           </div>
-
           <div class="accel__item accel__item--disabled">
             <h3 class="accel__item-title">Agents</h3>
           </div>
         </div>
       </div>
-
       <div class="accel__right">
         <img src="img/accel__image.png" alt="UI Preview" class="accel__image">
       </div>
-
     </div>
   </section>
 
+  <section class="trusted sc">
+    <div class="field">
+      <h2 class="trusted__title">Trusted by 9,000+ CX teams to deliver top-quality service at scale</h2>
+      <p class="trusted__review"><a href="">See all reviews &#10132;</a></p>
+    </div>
 
+    <div class="trusted__cards field">
 
+      <div class="trusted__card trusted__card--purple">
+        <div class="trusted__card__logo">
+          <img src="img/paystone-logo.png" alt="paystone-logo">
+        </div>
+        <h2 class="trusted__value">300</h2>
+        <p class="trusted__desc">hours saved per month</p>
+      </div>
+
+      <div class="trusted__card trusted__card--img trusted__card--img-1"
+        style="background-image: url('img/image-2937.png');">
+        <div class="trusted__card__logo">
+          <img src="img/VivaEve-logo.png" alt="VivaEve-logo">
+        </div>
+        <h2 class="trusted__value">60%</h2>
+        <p class="trusted__desc">reduction in email volume</p>
+      </div>
+
+      <div class="trusted__card trusted__card--white">
+        <div class="trusted__card__logo">
+          <img src="img/generation_logo.png" alt="generation_logo">
+        </div>
+        <h2 class="trusted__value">7X</h2>
+        <p class="trusted__desc">faster response time</p>
+      </div>
+
+      <div class="trusted__card trusted__card--img trusted__card--img-2"
+        style="background-image: url('img/image-2938.png');">
+        <div class="trusted__card__logo">
+          <img src="img/jacinta-logo.png" alt="jacinta-logo">
+        </div>
+        <h2 class="trusted__value">97%</h2>
+        <p class="trusted__desc">CSAT score</p>
+      </div>
+
+      <div class="trusted__card trusted__card--img trusted__card--img-3"
+        style="background-image: url('img/image-2939.png');">
+        <div class="trusted__card__logo">
+          <img src="img/glow-logo.png" alt="glow-logo">
+        </div>
+        <h2 class="trusted__value">7X</h2>
+        <p class="trusted__desc">faster response time</p>
+      </div>
+
+      <div class="trusted__card trusted__card--white trusted__card--big">
+        <div class="trusted__card__logo">
+          <img src="img/automatedocs-logo.png" alt="automatedocs-logo">
+        </div>
+        <p class="trusted__card__text">
+          Across our teams, Front is an integral part of the workflow.
+          We need a way to prioritize and automate how we're responding
+          because it's just a massive amount.
+        </p>
+        <p class="trusted__card__author">
+          Beth Moore<br>
+          <span>Head of Strategic Growth</span>
+        </p>
+      </div>
+
+      <div class="trusted__card trusted__card--yellow">
+        <div class="trusted__card__logo">
+          <img src="img/eternalaura-logo.png" alt="eternalaura-logo">
+        </div>
+        <h2 class="trusted__value">40%</h2>
+        <p class="trusted__desc">hours saved per month</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
