--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <div class="cards fl">
         <div class="card">
-          <img class="card__image" src="img/card-1.png" alt="AI Agent 1">
+          <img class="card__image" src="img/ai-agents/card-1.png" alt="AI Agent 1">
           <div class="card__content">
             <h3 class="card__title">Rapid answers to technical and product questions</h3>
             <p class="card__description">Rapid answers to technical and product questions
@@ -74,13 +74,13 @@
             <a class="card__link-gs">Get started for free</a>
           </div>
           <div class="card__links__container">
-            <img src="img/plus.png" alt="" class="card__desc-icon default-icon">
-            <img src="img/minus.png" alt="" class="card__desc-icon hover-icon">
+            <img src="img/ai-agents/plus.png" alt="" class="card__desc-icon default-icon">
+            <img src="img/ai-agents/minus.png" alt="" class="card__desc-icon hover-icon">
           </div>
         </div>
 
         <div class="card">
-          <img class="card__image" src="img/card-2.png" alt="AI Agent 1">
+          <img class="card__image" src="img/ai-agents/card-2.png" alt="AI Agent 1">
           <div class="card__content">
             <h3 class="card__title">Automate RFPs and other questionnaires
             </h3>
@@ -90,13 +90,13 @@
             <a class="card__link-gs">Get started for free</a>
           </div>
           <div class="card__links__container">
-            <img src="img/plus.png" alt="" class="card__desc-icon default-icon">
-            <img src="img/minus.png" alt="" class="card__desc-icon hover-icon">
+            <img src="img/ai-agents/plus.png" alt="" class="card__desc-icon default-icon">
+            <img src="img/ai-agents/minus.png" alt="" class="card__desc-icon hover-icon">
           </div>
         </div>
 
         <div class="card">
-          <img class="card__image" src="img/card-3.png" alt="AI Agent 1">
+          <img class="card__image" src="img/ai-agents/card-3.png" alt="AI Agent 1">
           <div class="card__content">
             <h3 class="card__title">Instant revenue enablement</h3>
             <p class="card__description">Empower your customer-facing teams with 24/7 guidance on product features,
@@ -105,8 +105,8 @@
             <a class="card__link-gs">Get started for free</a>
           </div>
           <div class="card__links__container">
-            <img src="img/plus.png" alt="" class="card__desc-icon default-icon">
-            <img src="img/minus.png" alt="" class="card__desc-icon hover-icon">
+            <img src="img/ai-agents/plus.png" alt="" class="card__desc-icon default-icon">
+            <img src="img//ai-agents/minus.png" alt="" class="card__desc-icon hover-icon">
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="accel__right">
-        <img src="img/accel__image.png" alt="UI Preview" class="accel__image">
+        <img src="img/accelerate/accel__image.png" alt="UI Preview" class="accel__image">
       </div>
     </div>
   </section>
@@ -149,16 +149,16 @@
 
       <div class="trusted__card trusted__card--purple">
         <div class="trusted__card__logo">
-          <img src="img/paystone-logo.png" alt="paystone-logo">
+          <img src="img/trusted/paystone-logo.png" alt="paystone-logo">
         </div>
         <h2 class="trusted__value">300</h2>
         <p class="trusted__desc">hours saved per month</p>
       </div>
 
       <div class="trusted__card trusted__card--img trusted__card--img-1"
-        style="background-image: url('img/image-2937.png');">
+        style="background-image: url('img/trusted/image-2937.png');">
         <div class="trusted__card__logo">
-          <img src="img/VivaEve-logo.png" alt="VivaEve-logo">
+          <img src="img/trusted/VivaEve-logo.png" alt="VivaEve-logo">
         </div>
         <h2 class="trusted__value">60%</h2>
         <p class="trusted__desc">reduction in email volume</p>
@@ -166,25 +166,25 @@
 
       <div class="trusted__card trusted__card--white">
         <div class="trusted__card__logo">
-          <img src="img/generation_logo.png" alt="generation_logo">
+          <img src="img/trusted/generation_logo.png" alt="generation_logo">
         </div>
         <h2 class="trusted__value">7X</h2>
         <p class="trusted__desc">faster response time</p>
       </div>
 
       <div class="trusted__card trusted__card--img trusted__card--img-2"
-        style="background-image: url('img/image-2938.png');">
+        style="background-image: url('img/trusted/image-2938.png');">
         <div class="trusted__card__logo">
-          <img src="img/jacinta-logo.png" alt="jacinta-logo">
+          <img src="img/trusted/jacinta-logo.png" alt="jacinta-logo">
         </div>
         <h2 class="trusted__value">97%</h2>
         <p class="trusted__desc">CSAT score</p>
       </div>
 
       <div class="trusted__card trusted__card--img trusted__card--img-3"
-        style="background-image: url('img/image-2939.png');">
+        style="background-image: url('img/trusted/image-2939.png');">
         <div class="trusted__card__logo">
-          <img src="img/glow-logo.png" alt="glow-logo">
+          <img src="img/trusted/glow-logo.png" alt="glow-logo">
         </div>
         <h2 class="trusted__value">7X</h2>
         <p class="trusted__desc">faster response time</p>
@@ -192,7 +192,7 @@
 
       <div class="trusted__card trusted__card--white trusted__card--big">
         <div class="trusted__card__logo">
-          <img src="img/automatedocs-logo.png" alt="automatedocs-logo">
+          <img src="img/trusted/automatedocs-logo.png" alt="automatedocs-logo">
         </div>
         <p class="trusted__card__text">
           Across our teams, Front is an integral part of the workflow.
@@ -207,12 +207,52 @@
 
       <div class="trusted__card trusted__card--yellow">
         <div class="trusted__card__logo">
-          <img src="img/eternalaura-logo.png" alt="eternalaura-logo">
+          <img src="img/trusted/eternalaura-logo.png" alt="eternalaura-logo">
         </div>
         <h2 class="trusted__value">40%</h2>
         <p class="trusted__desc">hours saved per month</p>
       </div>
     </div>
+  </section>
+
+  <section class="hi-work sc">
+    <div class="field">
+      <h2 class="hi-work__title">How it works</h2>
+      <p class="hi-work__review">The foundations of fast, reliable and consistent incident management.</p>
+      <img class="hi-work__img" src="img/howitwork/Frame-1707479037.png" alt="frame-1707479037">
+    </div>
+
+    <div class="hi-work__cards fl field">
+      <div>
+        <hr style="width: 50%;" color="black">
+        <div class="hi-work__card hi-work__card--active">
+          <h2 class="hi-work__card-title">Customize to fit your brand</h2>
+          <p class="hi-work__card-text">
+            Customers can easily initiate a return, choose exchanges, store credit, or a refund, and receive their
+            return
+            shipping label – all in a smooth, user-friendly portal.
+          </p>
+        </div>
+      </div>
+
+
+      <div class="hi-work__card">
+        <h2 class="hi-work__card-title">Customize to fit your brand</h2>
+        <p class="hi-work__card-text">
+          Customers can easily initiate a return, choose exchanges, store credit, or a refund, and receive their return
+          shipping label – all in a smooth, user-friendly portal.
+        </p>
+      </div>
+
+      <div class="hi-work__card">
+        <h2 class="hi-work__card-title">Customize to fit your brand</h2>
+        <p class="hi-work__card-text">
+          Customers can easily initiate a return, choose exchanges, store credit, or a refund, and receive their return
+          shipping label – all in a smooth, user-friendly portal.
+        </p>
+      </div>
+    </div>
+
   </section>
 </body>
 
