--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </div>
     </div>
   </header>
+
   <section class="banner">
     <div class="field">
       <div class="banner__container">
@@ -55,8 +56,6 @@
       </div>
     </div>
   </section>
-  <!-- </div> -->
-
 
   <section class="ai-agents">
     <div class="field">
@@ -293,9 +292,30 @@
         <h3>AI</h3>
         <p>Intelligence, context and power at the core of every incident.</p>
       </div>
-   
+
     </div>
   </section>
+
+  <section class="realm sc">
+    <div class="realm__container field fl">
+  
+      <div class="realm__content">
+        <h3 class="realm__title">Realm in action</h3>
+        <p class="realm__description">
+          The only way to grasp Realm’s impact is to try it. We’ll help connect your
+          company’s knowledge and onboard your team. You can get going today!
+        </p>
+  
+        <a href="#" class="btn btn--blue"> Get started for free</a>
+      </div>
+  
+      <div class="realm__img-container">
+        <img class="realm__side-img" src="img/realm/side-img.png" alt="side-img">
+      </div>
+  
+    </div>
+  </section>
+  
 </body>
 
 </html>
