last state for future

--- a/index.html
+++ b/index.html
@@ -298,24 +298,69 @@
 
   <section class="realm sc">
     <div class="realm__container field fl">
-  
+
       <div class="realm__content">
         <h3 class="realm__title">Realm in action</h3>
         <p class="realm__description">
           The only way to grasp Realm’s impact is to try it. We’ll help connect your
           company’s knowledge and onboard your team. You can get going today!
         </p>
-  
+
         <a href="#" class="btn btn--blue"> Get started for free</a>
       </div>
-  
+
       <div class="realm__img-container">
         <img class="realm__side-img" src="img/realm/side-img.png" alt="side-img">
       </div>
-  
+
     </div>
   </section>
-  
+
+  <section class="future sc">
+    <div class="future__header field fl">
+      <div class="future__text">
+        <h1 class="future__title">The future of the web is yours to build</h1>
+        <p class="future__subtitle">
+          Explore whitepapers, ebooks, and more about creating web experiences that get
+          results with Webflow.
+        </p>
+      </div>
+
+      <div class="future__nav">
+        <button class="future__nav-btn future__nav-btn--gray">&#8592;</button>
+        <button class="future__nav-btn future__nav-btn--black">&#8594;</button>
+      </div>
+    </div>
+
+    <div class="future__cards field">
+      <div class="future__card">
+        <div class="future__card-inner">
+          <span class="future__badge">WEBINARS</span>
+          <h3 class="future__card-title">Reclaimed per employee per year</h3>
+          <a href="#" class="future__card-link">Watch webinar →</a>
+        </div>
+      </div>
+
+      <div class="future__card">
+        <div class="future__card-inner">
+          <span class="future__badge">BLOG</span>
+          <h3 class="future__card-title">
+            Dermalogica’s formula for a scalable website testing program
+          </h3>
+          <a href="#" class="future__card-link">Read blog →</a>
+        </div>
+      </div>
+
+      <div class="future__card">
+        <div class="future__card-inner">
+          <span class="future__badge">WEBINARS</span>
+          <h3 class="future__card-title">Reclaimed per employee per year</h3>
+          <a href="#" class="future__card-link">Watch webinar →</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
