--- a/index.html
+++ b/index.html
@@ -320,42 +320,43 @@
     <div class="future__header field fl">
       <div class="future__text">
         <h1 class="future__title">The future of the web is yours to build</h1>
-        <p class="future__subtitle">
+        <p class="future__description">
           Explore whitepapers, ebooks, and more about creating web experiences that get
           results with Webflow.
         </p>
       </div>
-
-      <div class="future__nav">
-        <button class="future__nav-btn future__nav-btn--gray">&#8592;</button>
-        <button class="future__nav-btn future__nav-btn--black">&#8594;</button>
-      </div>
     </div>
 
-    <div class="future__cards field">
+    <div class="future__cards field fl">
       <div class="future__card">
-        <div class="future__card-inner">
-          <span class="future__badge">WEBINARS</span>
-          <h3 class="future__card-title">Reclaimed per employee per year</h3>
-          <a href="#" class="future__card-link">Watch webinar →</a>
+        <div class="future__card__inner">
+          <div>
+            <span class="future__card__badge">WEBINARS</span>
+          </div>
+          <h3 class="future__card__title">Reclaimed per employee per year</h3>
+          <a href="#" class="future__card__link">Watch webinar </a>
         </div>
       </div>
 
       <div class="future__card">
-        <div class="future__card-inner">
-          <span class="future__badge">BLOG</span>
-          <h3 class="future__card-title">
+        <div class="future__card__inner">
+          <div>
+            <span class="future__card__badge">BLOG</span>
+          </div>
+          <h3 class="future__card__title">
             Dermalogica’s formula for a scalable website testing program
           </h3>
-          <a href="#" class="future__card-link">Read blog →</a>
+          <a href="#" class="future__card__link">Read blog </a>
         </div>
       </div>
 
       <div class="future__card">
-        <div class="future__card-inner">
-          <span class="future__badge">WEBINARS</span>
-          <h3 class="future__card-title">Reclaimed per employee per year</h3>
-          <a href="#" class="future__card-link">Watch webinar →</a>
+        <div class="future__card__inner">
+          <div>
+            <span class="future__card__badge">WEBINARS</span>
+          </div>
+          <h3 class="future__card__title">Reclaimed per employee per year</h3>
+          <a href="#" class="future__card__link">Watch webinar </a>
         </div>
       </div>
     </div>
