--- a/index.html
+++ b/index.html
@@ -362,6 +362,20 @@
     </div>
   </section>
 
+
+  <section class="banner">
+    <div class="field">
+      <div class="banner__container">
+        <h1 class="banner__title">
+          Unlock efficient revenuegrowth with Realm
+        </h1>
+        <div class="fl" style="justify-content: center; gap:24px">
+          <a href="#" class="btn btn--blue">Get started for free</a>
+          <a href="#" class="btn btn--transparent">Get started for free</a>
+        </div>
+      </div>
+  </section>
+
 </body>
 
 </html>
